shortened image names

--- a/odin-recipes/recipes/pizza.html
+++ b/odin-recipes/recipes/pizza.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
         <meta charset="UTF-8"> 
         <h1>Pizza Margherita</h1>
-    <img src="../images/margherita.jpg">
+    <img src="margherita.jpg">
     <h1><strong Savoury margherita pizza best served with red wine></strong></h1>
 <p>Inspired by the pizza at Bar Del Corso, this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
 <h2>Ingredients</h2>
