--- a/odin-recipes/recipes/risotto.html
+++ b/odin-recipes/recipes/risotto.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
         <meta charset="UTF-8"> 
         <h1>Risotto</h1>
-    <img src="../images/risotto.jpg">
+    <img src="risotto.jpg">
     <h1><strong risotto with tomato, corn and basil></strong></h1>
 <p>This risotto dish is best suited for the end of summer when the tomatoes and corn are at their best. Using milk in the risotto dish gives it a lovely richness and creaminess.</p>
 <h2>Ingredients</h2>
