--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
         <meta charset="UTF-8"> 
     <h1>Lasagna</h1>
-    <img src="images/lasagna.jpg">
+    <img src="lasagna.jpg">
     <h1><strong delicious lasagna dinner best served with red wine></strong></h1>
 <p>This hearty, vegetable lasagna is spectacular.</p>
 <h2>Ingredients</h2>
