--- a/odin-recipes/recipes/pizza.html
+++ b/odin-recipes/recipes/pizza.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
         <meta charset="UTF-8"> 
         <h1>Pizza Margherita</h1>
-    <img src="margherita.jpg">
+    <img src="margherita.jpg"> 
     <h1><strong Savoury margherita pizza best served with red wine></strong></h1>
 <p>Inspired by the pizza at Bar Del Corso, this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
 <h2>Ingredients</h2>
@@ -25,7 +25,7 @@
     <li>Mix water, yeast, and sugar in a large bowl. Let stand until yeast begins to form a creamy foam, about 5 minutes.</li>
     <li>Stir half the flour mixture into yeast mixture until no dry spots remain. Stir in remaining flour, 1/2 cup at a time, mixing well after each addition. When dough pulls together, turn it out onto a lightly floured surface and knead until smooth and elastic, about 8 minutes.</li>
     <li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
-    <li>Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato sauce, then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for 3 remaining dough balls.</li>
+    <li>Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato sauce, then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for three remaining dough balls.</li>
     <li>Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5 to 7 minutes.</li>
 </ol>
 <a href="file:///Users/nicolasbron/repos/odin-recipes/index.html">Return to main page</a>
