updated back to home page link

--- a/risotto.html
+++ b/risotto.html
@@ -28,5 +28,5 @@
     <li>Begin to add the heated milk-water mixture 1/2 cup at a time, stirring frequently. Wait until each addition is almost completely absorbed before adding the next. When the rice has cooked for 15 minutes and most of the liquid has been incorporated, add the corn kernels and tomatoes along with the end of the milk-water mixture. Cook, stirring frequently, until the rice is tender but still slightly chewy.</li>
     <li>The risotto should take 18 to 20 minutes of cooking all together. Stir in the Parmesan cheese, most of the basil, and the salt and pepper. Spoon the risotto immediately onto plates, top with the remaining basil strands, and serve.</li>
 </ol>
-<a href="file:///Users/nicolasbron/repos/odin-recipes/index.html">Return to main page</a>
+<a href="index.html">Return to main page</a>
 </html>
